test/analyzer/input_programs/invalid_programs/program11.tea
T := true
F := false

# all fine and dandy here
not true
not T
not F

# not okay since operand must be bool
not 37